# Engine

Core/: CMakeLists.txt
Core/includes/SimpleCore/Utils/: test.hpp
Core/src/SimpleCore/Utils/: test.cpp
Editor/: CMakeLists.txt
Editor/src/: main.cpp
